compressed images, added responsive breakpoints in code

--- a/portfolio 2024/about me.html
+++ b/portfolio 2024/about me.html
@@ -18,71 +18,70 @@
 
   <body>
 
-    <!-- navbar -->
-    <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body sticky-top" data-bs-theme="dark">
-        <div class="container">
-          <a class="navbar-brand" style="margin-left: 2%;" href="#">
-            <img src="images/ROSOKHA WHITE LOGO-08.png" alt="ROSOKHA" width="150" height="75">
-          </a>
+     <!-- navbar -->
+     <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body sticky-top" data-bs-theme="dark">
+      <div class="container-fluid">
+        <a class="navbar-brand ms-2" href="#">
+          <img src="images/ROSOKHA WHITE LOGO-08-min.png" alt="ROSOKHA" width="150" height="75">
+        </a>
+        <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+          <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+          <div class="navbar-nav ms-auto">
+            <a class="nav-link fs-5" href="index copy.html">Home</a>
+            <a class="nav-link fs-5" href="about me.html">About me</a>
+            <a class="nav-link fs-5" href="portfolio.html">Portfolio</a>
+            <a class="nav-link fs-5" href="contact.html">Contact</a>
+          </div>
         </div>
-        <div class="container-fluid">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse position-absolute top-40 end-0" style="margin-right: 2%;" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-link" style="font-size: large;" href="index.html">Home</a>
-                <a class="nav-link" style="font-size: large;" href="about me.html">About me</a>
-                <a class="nav-link" style="font-size: large;" href="resume.html">Resume</a>
-                <a class="nav-link" style="font-size: large;" href="portfolio.html">Portfolio</a>
-                <a class="nav-link" style="font-size: large;" href="contact.html">Contact</a>
-            </div>
-          </div>        
-        </div>
+      </div>
     </nav>
 
-    <!-- About Me Section -->
-  <section class="text-center text-light d-flex flex-column justify-content-center align-items-center" style="background-image: url('images/About\ me\ bg.png'); background-size: cover; background-position: center; min-height: 100vh; display: flex; align-items: center; justify-content: center;">
-    <div class="container">
-        <div class="row align-items-center">
-          <!-- Profile Image -->
-          <div class="col-md-4 text-center">
-            <img src="images/my profile.jpg" alt="Profile Picture" class="profile-img rounded-circle mb-4" style="width: 350px; height: 350px; object-fit: cover; margin-top: 15%;">
-          </div>
-          <!-- About Text -->
-          <div class="col-md-8" style="font-size: x-large; margin-top: 5%;">
-            <p class="about-text">
-              Hi! I'm Rhea Trasikar, an aspiring designer from Mumbai who’s been <br> exploring her newfound love for communication design, specifically <br> typography. I am currently still a student experimenting with things. <br> I’m a Bollywood enthusiast along with being an avid reader, painter, <br> murder mystery/thriller enthusiast, and a huge foodie. :)
-            </p>
-          </div>
-        </div>
+<!-- About Me Section -->
+<section class="text-center text-light d-flex flex-column justify-content-center align-items-center" 
+         style="background-image: url('images/About\ me\ bg-min.png'); background-size: cover; background-position: center; min-height: 100vh;">
+  <div class="container">
+    <div class="row align-items-center mt-5">
+      <!-- Profile Image -->
+      <div class="col-12 col-sm-6 col-md-4 text-center mb-4 mb-md-0">
+        <img src="images/my profile-min.jpg" alt="Profile Picture" 
+             class="rounded-circle img-fluid" 
+             style="width: 100%; max-width: 350px; height: auto; object-fit: cover;">
       </div>
-  </section>
+      <!-- About Text -->
+      <div class="col-12 col-sm-6 col-md-8 text-md-start">
+        <p class="about-text fs-5 fw-light">
+          Hi! I'm Rhea Trasikar, an aspiring designer from Mumbai who’s been <br>
+          exploring her newfound love for communication design, specifically <br>
+          typography. I am currently still a student experimenting with things. <br>
+          I’m a Bollywood enthusiast along with being an avid reader, painter, <br>
+          murder mystery/thriller enthusiast, and a huge foodie. :)
+        </p>
+      </div>
+    </div>
+  </div>
+</section>
+
 
   <!-- Footer -->
-<footer class="footer-section text-center text-white py-5" style="background-color: #4a1096;">
+  <footer class="footer-section text-center text-white py-5" style="background-color: #4a1096;">
     <div class="container">
-      <!-- Logo Image in Hindi -->
       <div class="footer-logo mb-4">
-        <img src="images/ROSOKHA WHITE LOGO-08.png" alt="रो. सो. खा. logo" class="img-fluid mx-auto d-block" style="max-width: 400px;">
+        <img src="images/ROSOKHA WHITE LOGO-08-min.png" alt="रो. सो. खा. logo" class="img-fluid mx-auto d-block" style="max-width: 400px;">
       </div>
-  
-      <!-- Get in Touch Text -->
-      <h4 class="contact-title" style="font-size: xx-large;">Get in touch</h4>
-  
-      <!-- Contact Icons -->
-
-      <div class="d-flex justify-content-center mt-10">
-        <a href="mailto:rheatrasikar@gmail.com" style="color: rgb(255, 255, 255); font-size: 3.0rem;" class="contact-icon mx-3">
-            <i class="bi bi-envelope-fill"></i>
+      <h4 class="contact-title fs-3">Get in touch</h4>
+      <div class="d-flex justify-content-center mt-4">
+        <a href="mailto:rheatrasikar@gmail.com" class="contact-icon mx-3 fs-3 text-white">
+          <i class="bi bi-envelope-fill"></i>
         </a>
-        <a href="https://www.instagram.com/rosokha.in?igsh=aGc3Z21tMG9zMWE3" style="color: rgb(255, 255, 255); font-size: 3.0rem;" target="_blank" class="contact-icon mx-3">
-            <i class="bi bi-instagram"></i>
+        <a href="https://www.instagram.com/rosokha.in?igsh=aGc3Z21tMG9zMWE3" target="_blank" class="contact-icon mx-3 fs-3 text-white">
+          <i class="bi bi-instagram"></i>
         </a>
-        <a href="tel: 123456789" style="color: rgb(255, 255, 255); font-size: 3.0rem;" class="contact-icon mx-3">
-            <i class="bi bi-telephone-fill"></i>
+        <a href="tel: 123456789" class="contact-icon mx-3 fs-3 text-white">
+          <i class="bi bi-telephone-fill"></i>
         </a>
-    </div>
+      </div>
     </div>
   </footer>
   
