--- a/portfolio 2024/contact.html
+++ b/portfolio 2024/contact.html
@@ -18,32 +18,29 @@
   
   <body>
 
-    <!-- navbar -->
-    <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body sticky-top" data-bs-theme="dark">
-        <div class="container">
-          <a class="navbar-brand" style="margin-left: 2%;" href="#">
-            <img src="images/ROSOKHA WHITE LOGO-08.png" alt="ROSOKHA" width="150" height="75">
-          </a>
+  <!-- navbar -->
+  <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body sticky-top" data-bs-theme="dark">
+    <div class="container-fluid">
+      <a class="navbar-brand ms-2" href="#">
+        <img src="images/ROSOKHA WHITE LOGO-08-min.png" alt="ROSOKHA" width="150" height="75">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav ms-auto">
+          <a class="nav-link fs-5" href="index copy.html">Home</a>
+          <a class="nav-link fs-5" href="about me.html">About me</a>
+          <a class="nav-link fs-5" href="portfolio.html">Portfolio</a>
+          <a class="nav-link fs-5" href="contact.html">Contact</a>
         </div>
-        <div class="container-fluid">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse position-absolute top-40 end-0" style="margin-right: 2%;" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-link" style="font-size: large;" href="index.html">Home</a>
-                <a class="nav-link" style="font-size: large;" href="about me.html">About me</a>
-                <a class="nav-link" style="font-size: large;" href="resume.html">Resume</a>
-                <a class="nav-link" style="font-size: large;" href="portfolio.html">Portfolio</a>
-                <a class="nav-link" style="font-size: large;" href="contact.html">Contact</a>
-            </div>
-          </div>        
-        </div>
-    </nav>
+      </div>
+    </div>
+  </nav>
 
      <!-- Contact -->
 
-     <section class="contact-section d-flex justify-content-center align-items-center" style="min-height: 100vh; background-image: url('images/Contact\ bg.png'); background-size: cover; background-position: center;">
+     <section class="contact-section d-flex justify-content-center align-items-center" style="min-height: 100vh; background-image: url('images/Contact\ bg-min.png'); background-size: cover; background-position: center;">
         <div class="container">
           <div class="row justify-content-center">
             <!-- Contact Form -->
@@ -75,29 +72,23 @@
       
     <!-- Footer -->
     <footer class="footer-section text-center text-white py-5" style="background-color: #4a1096;">
-        <div class="container">
-            <!-- Logo Image in Hindi -->
-               <div class="footer-logo mb-4">
-                 <img src="images/ROSOKHA WHITE LOGO-08.png" alt="रो. सो. खा. logo" class="img-fluid mx-auto d-block" style="max-width: 400px;">
-               </div>
-
-            <!-- Get in Touch Text -->
-            <h4 class="contact-title" style="font-size: xx-large;">Get in touch</h4>
-
-            <!-- Contact Icons -->
-
-            <div class="d-flex justify-content-center mt-10">
-                <a href="mailto:rheatrasikar@gmail.com" style="color: rgb(255, 255, 255); font-size: 3.0rem;" class="contact-icon mx-3">
-                  <i class="bi bi-envelope-fill"></i>
-                </a>
-                <a href="https://www.instagram.com/rosokha.in?igsh=aGc3Z21tMG9zMWE3" style="color: rgb(255, 255, 255); font-size: 3.0rem;" target="_blank" class="contact-icon mx-3">
-                  <i class="bi bi-instagram"></i>
-                </a>
-                <a href="tel: 123456789" style="color: rgb(255, 255, 255); font-size: 3.0rem;" class="contact-icon mx-3">
-                  <i class="bi bi-telephone-fill"></i>
-                </a>
-            </div>
+      <div class="container">
+        <div class="footer-logo mb-4">
+          <img src="images/ROSOKHA WHITE LOGO-08-min.png" alt="रो. सो. खा. logo" class="img-fluid mx-auto d-block" style="max-width: 400px;">
         </div>
+        <h4 class="contact-title fs-3">Get in touch</h4>
+        <div class="d-flex justify-content-center mt-4">
+          <a href="mailto:rheatrasikar@gmail.com" class="contact-icon mx-3 fs-3 text-white">
+            <i class="bi bi-envelope-fill"></i>
+          </a>
+          <a href="https://www.instagram.com/rosokha.in?igsh=aGc3Z21tMG9zMWE3" target="_blank" class="contact-icon mx-3 fs-3 text-white">
+            <i class="bi bi-instagram"></i>
+          </a>
+          <a href="tel: 123456789" class="contact-icon mx-3 fs-3 text-white">
+            <i class="bi bi-telephone-fill"></i>
+          </a>
+        </div>
+      </div>
     </footer>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
