--- a/portfolio 2024/kaanch page.html
+++ b/portfolio 2024/kaanch page.html
@@ -15,35 +15,33 @@
       </style>
   </head>
   <body>
-    <!-- navbar -->
-    <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body sticky-top" data-bs-theme="dark">
-        <div class="container">
-          <a class="navbar-brand" style="margin-left: 2%;" href="#">
-            <img src="images/ROSOKHA WHITE LOGO-08.png" alt="ROSOKHA" width="150" height="75">
-          </a>
+
+   <!-- navbar -->
+   <nav class="navbar navbar-expand-lg bg-dark border-bottom border-body sticky-top" data-bs-theme="dark">
+    <div class="container-fluid">
+      <a class="navbar-brand ms-2" href="#">
+        <img src="images/ROSOKHA WHITE LOGO-08-min.png" alt="ROSOKHA" width="150" height="75">
+      </a>
+      <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+      <div class="collapse navbar-collapse" id="navbarNavAltMarkup">
+        <div class="navbar-nav ms-auto">
+          <a class="nav-link fs-5" href="index copy.html">Home</a>
+          <a class="nav-link fs-5" href="about me.html">About me</a>
+          <a class="nav-link fs-5" href="portfolio.html">Portfolio</a>
+          <a class="nav-link fs-5" href="contact.html">Contact</a>
         </div>
-        <div class="container-fluid">
-          <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNavAltMarkup" aria-controls="navbarNavAltMarkup" aria-expanded="false" aria-label="Toggle navigation">
-            <span class="navbar-toggler-icon"></span>
-          </button>
-          <div class="collapse navbar-collapse position-absolute top-40 end-0" style="margin-right: 2%;" id="navbarNavAltMarkup">
-            <div class="navbar-nav">
-                <a class="nav-link" style="font-size: large;" href="index.html">Home</a>
-                <a class="nav-link" style="font-size: large;" href="about me.html">About me</a>
-                <a class="nav-link" style="font-size: large;" href="resume.html">Resume</a>
-                <a class="nav-link" style="font-size: large;" href="portfolio.html">Portfolio</a>
-                <a class="nav-link" style="font-size: large;" href="contact.html">Contact</a>
-            </div>
-          </div>        
-        </div>
-      </nav>
+      </div>
+    </div>
+  </nav>
 
       <!-- project section -->
 
       <section 
   class="project-section" 
   style="
-    background-image: url('images/project\ 5\ BG.png'); 
+    background-image: url('images/project\ 5\ BG-min.png'); 
     background-size: cover; 
     background-position: center; 
     background-repeat: no-repeat; 
@@ -53,77 +51,70 @@
     display: flex; 
     flex-direction: column; 
     justify-content: center;">
+  
   <div class="container">
     <!-- Top Row: Image + Description -->
     <div class="row align-items-center mb-5">
       <!-- Image -->
-      <div class="col-md-6 mb-3">
+      <div class="col-12 col-sm-6 col-md-6 mb-3 mb-md-0 text-center text-md-start">
         <img 
-          src="images/kaanch photo.jpg" 
+          src="images/kaanch photo-min.jpg" 
           alt="Project Image" 
-          class="img-fluid rounded shadow"
-          style="margin-top: 150px; margin-left: -30px;">
+          class="img-fluid mt-5 pt-4 rounded shadow"
+          style="max-width: 100%; margin-left: 0;">
       </div>
       <!-- Description -->
-      <div class="col-md-6">
+      <div class="col-12 col-sm-12 col-md-6">
         <p 
-          class="lead" 
-          style="color: rgb(255, 255, 255); font-size: x-large; line-height: 1.8; margin-top: 150px;">
+          class="lead text-light fs-5 lh-lg mt-4 mt-md-5">
           Introducing Kaanch: The Card Game, a recent project that my team and I developed as part of an academic assignment. We were tasked with creating an awareness campaign for a sustainable material, with our given material being glass. Through this project, I gained valuable experience in social media management and product packaging, and learned the process of developing a card game from scratch.
-        </p>
+        </p>  
       </div>
     </div>
-
+  
     <!-- Bottom Row: Two Images -->
     <div class="row">
       <!-- Image 1 -->
-      <div class="col-md-6 mb-4">
+      <div class="col-12 col-sm-6 col-md-6 mb-2 text-center text-md-start">
         <img 
-          src="images/KAANCH 2.JPG" 
+          src="images/KAANCH 2-min.JPG" 
           alt="Project Detail Image" 
-          class="img-fluid rounded shadow" style="margin-left: -30px;"
-          >
+          class="img-fluid rounded shadow" 
+          style="max-width: 100%;">
       </div>
       <!-- Image 2 -->
-      <div class="col-md-6 mb-4">
+      <div class="col-12 col-sm-6 col-md-6 mb-2 text-center text-md-start">
         <img 
-          src="images/KAANCH 3.PNG" 
+          src="images/KAANCH 3-min.PNG" 
           alt="Project Detail Image" 
-          class="img-fluid rounded shadow">
+          class="img-fluid rounded shadow"
+          style="max-width: 100%;">
       </div>
     </div>
   </div>
-</section>
+  
+  </section>
 
-
-
-
-      <!-- Footer -->
-      <footer class="footer-section text-center text-white py-5" style="background-color: #4a1096;">
-        <div class="container">
-            <!-- Logo Image in Hindi -->
-               <div class="footer-logo mb-4">
-                 <img src="images/ROSOKHA WHITE LOGO-08.png" alt="रो. सो. खा. logo" class="img-fluid mx-auto d-block" style="max-width: 400px;">
-               </div>
-
-            <!-- Get in Touch Text -->
-            <h4 class="contact-title" style="font-size: xx-large;">Get in touch</h4>
-
-            <!-- Contact Icons -->
-
-            <div class="d-flex justify-content-center mt-10">
-                <a href="mailto:rheatrasikar@gmail.com" style="color: rgb(255, 255, 255); font-size: 3.0rem;" class="contact-icon mx-3">
-                  <i class="bi bi-envelope-fill"></i>
-                </a>
-                <a href="https://www.instagram.com/rosokha.in?igsh=aGc3Z21tMG9zMWE3" style="color: rgb(255, 255, 255); font-size: 3.0rem;" target="_blank" class="contact-icon mx-3">
-                  <i class="bi bi-instagram"></i>
-                </a>
-                <a href="tel: 123456789" style="color: rgb(255, 255, 255); font-size: 3.0rem;" class="contact-icon mx-3">
-                  <i class="bi bi-telephone-fill"></i>
-                </a>
-            </div>
-        </div>
-    </footer>
+<!-- Footer -->
+<footer class="footer-section text-center text-white py-5" style="background-color: #4a1096;">
+  <div class="container">
+    <div class="footer-logo mb-4">
+      <img src="images/ROSOKHA WHITE LOGO-08-min.png" alt="रो. सो. खा. logo" class="img-fluid mx-auto d-block" style="max-width: 400px;">
+    </div>
+    <h4 class="contact-title fs-3">Get in touch</h4>
+    <div class="d-flex justify-content-center mt-4">
+      <a href="mailto:rheatrasikar@gmail.com" class="contact-icon mx-3 fs-3 text-white">
+        <i class="bi bi-envelope-fill"></i>
+      </a>
+      <a href="https://www.instagram.com/rosokha.in?igsh=aGc3Z21tMG9zMWE3" target="_blank" class="contact-icon mx-3 fs-3 text-white">
+        <i class="bi bi-instagram"></i>
+      </a>
+      <a href="tel: 123456789" class="contact-icon mx-3 fs-3 text-white">
+        <i class="bi bi-telephone-fill"></i>
+      </a>
+    </div>
+  </div>
+</footer>
     
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
   </body>
